# gen_ai_e2

./: .gitignore  Medical_Diagnosis_RAG_Assistant.ipynb  README.md  pyproject.toml
