[tool.poetry]
package-mode = false

[project]
name = "gen-ai-e2"
version = "0.1.0"
description = ""
authors = [
    {name = "pranabbijoypuri",email = "santubijoypuri@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "langchain (>=1.3.11,<2.0.0)",
    "langchain-community (>=0.4.2,<0.5.0)",
    "langchain-openai (>=1.3.3,<2.0.0)",
    "langchain-huggingface (>=1.2.2,<2.0.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "chromadb (>=1.5.9,<2.0.0)",
    "sentence-transformers (>=5.6.0,<6.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "gradio (>=6.19.0,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
